<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_classroom"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/classroom" />
    <item
        android:id="@+id/nav_lessons"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/lessons" />
    <item
        android:id="@+id/nav_tools"
        android:icon="@android:drawable/ic_menu_crop"
        android:title="@string/tools" />
    <item
        android:id="@+id/nav_sync"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/sync_tab" />
</menu>
